# ddos-protection-service

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.yml
benches/: rate_limiter.rs
config/: default.toml  rules.json
docker/: Dockerfile  Dockerfile.dev
src/: main.rs  models.rs  utils.rs
src/api/: mod.rs
src/config/: mod.rs
src/core/: analytics.rs  cloudflare.rs  ddos_detector.rs  mod.rs  monitoring.rs  rate_limiter.rs  rule_engine.rs
