[package]
name = "ddos_protection_service"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A comprehensive DDoS protection and traffic management system"
license = "MIT"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.8"

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"

# Redis
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
futures = "0.3"

# HTTP client for Cloudflare API
reqwest = { version = "0.11", features = ["json"] }

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[dev-dependencies]
# Testing
mockall = "0.11"
tokio-test = "0.4"
criterion = "0.5"
cargo-watch = "8.4"
